[#140641579] Fix button font too bold on Firefox

--- a/app/assets/stylesheets/sephora_style_guide/_reset.scss
+++ b/app/assets/stylesheets/sephora_style_guide/_reset.scss
@@ -11,10 +11,13 @@ html {
   color: $black;
   font-size: $font-size-root-mobile;
   line-height: $line-height-root-mobile;
-  -ms-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
-  -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-font-smoothing: antialiased;
+  -ms-text-size-adjust: 100%;
+  -ms-overflow-style: scrollbar;
+  -moz-osx-font-smoothing: grayscale;
 
   @include media-breakpoint-up(md) {
     font-size: $font-size-root;
@@ -24,9 +27,6 @@ html {
 
 body {
   background-color: $body-bg;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: 100%;
 }
 
 [tabindex='-1']:focus {
