--- a/app/assets/stylesheets/sephora_style_guide/variables/_buttons.scss
+++ b/app/assets/stylesheets/sephora_style_guide/variables/_buttons.scss
@@ -1,4 +1,3 @@
-
 $btn-line-height:         1;
 $btn-border-width:        1px;
 
@@ -8,15 +7,15 @@ $btn-default-border:      $black;
 
 $btn-primary-color:       $white;
 $btn-primary-bg:          $brand-primary;
-$btn-primary-border:      $btn-primary-bg;
-
-$btn-grey-color:          $white;
-$btn-grey-bg:             $grey-mid;
-$btn-grey-border:         $grey-mid;
+$btn-primary-border:      $brand-primary;
 
 $btn-white-color:         $black;
 $btn-white-bg:            $white;
 $btn-white-border:        $black;
+
+$btn-grey-color:          $white;
+$btn-grey-bg:             $grey-mid;
+$btn-grey-border:         $grey-mid;
 
 $btn-disabled-color:      $grey;
 $btn-disabled-bg:         $grey-light;
@@ -35,4 +34,3 @@ $btn-padding-y-lg:        13.5px;
 $btn-font-size-lg:        16px;
 
 $btn-block-spacing-y:     10px;
-// $btn-toolbar-margin:      .5rem;
